i18n/en/docusaurus-plugin-content-docs/version-3.3.1/changelog.mdx
---
title: Changelog
---

import SuggestionLink from '@site/src/components/SuggestionLink';

Discover the detailed list of changes made to RaidProtect.

## 3.3.1 (09/02/2026) {#3-3-1}

- [Internationalization](./language.md) (addition of German, Spanish, and Portuguese).
- New **[Jail](./features/sanctions.mdx#jail)** system.
  - New [`/jail` command](./features/moderation.mdx#jail) to jail a member.
  - New [`/tempjail` command](./features/moderation.mdx#tempjail) to temporarily jail a member.
  - New [`/unjail` command](./features/moderation.mdx#unjail) to release a member.
  - Configuration of the Jail role and information channel via `/settings`.
- New **[Role-based Mute](./features/sanctions.mdx#mute)** system: beyond a [configurable threshold](./features/sanctions.mdx#mute-threshold), the bot assigns a Mute role instead of the Discord timeout.
  - The `/timeout` and `/untimeout` commands become [`/mute`](./features/moderation.mdx#timeout) and [`/unmute`](./features/moderation.mdx#untimeout). Discord timeout is still used by default below the threshold.
  - New `[force_timeout]` parameter to force Discord timeout regardless of the duration.
- [Sanction via context menu](./features/moderation.mdx#context-menu) (right-click on a profile).
- New [`/my-sanctions` command](./features/utilities.mdx#my-sanctions) to allow members to view their own sanctions.
- New [Sanctions Privacy](./features/sanctions.mdx#sanctions-privacy) setting to control access to personal sanctions.
- New [Show Media](./features/sanctions.mdx#show-medias) setting in sanction reasons.
- Visual redesign of filters in [`/sanctions search`](./features/sanctions.mdx#search) and addition of the [moderator type](./features/sanctions.mdx#search) filter.
- [Import / Export sanctions](./features/sanctions.mdx#import-export) via the support bot.
- **[Information Panels](./features/display.mdx)** system (`/display public`).
- New **[member blocking](./features/utilities.mdx#block)** system for certain RaidProtect features on a server.
  - New [`/block add` command](./features/utilities.mdx#block-add).
  - New [`/block remove` command](./features/utilities.mdx#block-remove).
  - New [`/block list` command](./features/utilities.mdx#block-list).
- New [`/prune` command](./features/utilities.mdx#prune) to kick inactive members with more precise conditions. <SuggestionLink id="256" />
- New [`/channel clear` command](./features/utilities.mdx#channel-clear) to delete and recreate a channel. <SuggestionLink id="543" />
- Logs for `/bypass` commands. <SuggestionLink id="546" />
- New **Anti-Scam** module.
- Fixes:
  - Improved captcha management.
  - Fixed prefix validation.
  - Translation fixes.
- Performance and stability:
  - New translation framework ([`@fca.gg/hermes` v1.2.1](https://github.com/FCAgreatgoals/hermes)).

## 3.3.0 (19/12/2025) {#3-3-0}

- New feature **[Sanctions History](./features/sanctions.mdx)**.
  - New [command `/sanctions search`](./features/sanctions.mdx#search).
  - New [command `/sanctions info`](./features/sanctions.mdx#info).
  - New [command `/sanctions edit`](./features/sanctions.mdx#edit).
  - New [command `/sanctions delete`](./features/sanctions.mdx#delete).
  - Automod sanctions are added to the sanctions history.
  - Bans, kicks and timeouts are added to history and logged. <SuggestionLink id="151" />
  - Acknowledgment receipt of the sanction notification private message.
- New logs for sanctions.
- Ability to configure a dedicated sanctions log channel.
- New [command `/warn`](./features/moderation.mdx#warn). <SuggestionLink id="52" />
- New [command `/untimeout`](./features/moderation.mdx#untimeout). <SuggestionLink id="52" />
- New [command `/tempban`](./features/moderation.mdx#tempban). <SuggestionLink id="524" />
- [RaidMode](./features/raid-mode.md#raid-mode) and [Auto RaidMode](./features/raid-mode.md#duration) automatically deactivate after a certain time. <SuggestionLink id="37" />
- New [duration] parameter for the [command `/raidmode`](./features/raid-mode.md#raid-mode). <SuggestionLink id="37" />
- New [command `/joinlock`](./features/join-lock.mdx) to close invites indefinitely.
- New [command `/channel duplicate`](./features/utilities.mdx#channel-duplicate) to strictly duplicate a channel. <SuggestionLink id="225" />
- New command `/changelog` and buttons in `/settings` and `/about` to view the changelog.
- Acknowledgment receipt of the [Minimum Age](./features/raid-mode.md#minage) private message.
- Fixes:
  - Improved cooldown handling.
  - Fixed various translation errors.
  - Increased maximum sanction reason size (512).
- Performance and stability:
  - Optimized message cache.
  - Optimized database storage.
  - Sanction expiration handling (`@fca.gg/midway` v1.3.2).
  - Revamped emoji management ([`@fca.gg/glyph` v1.1.1](https://github.com/FCAgreatgoals/glyph)).

## 3.2.1 (03/09/2025) {#3-2-1}

- New [command `/ds`](./features/utilities.mdx#discord-sanctions) allowing to view a user's Discord sanctions.
- Anti-spam is now able to stop Slash Command spam.
- New anti-spam trigger: [External command spam](./features/anti-spam.mdx#triggers).
- New [command `/slowmode`](./features/moderation.mdx#slowmode) to enable or modify the slowmode of a channel.
- New [command `/unban`](./features/moderation.mdx#unban). <SuggestionLink id="296" />
- New [command `/bypass captcha`](./features/captcha.md#bypass) to accept a user who cannot solve the captcha.
- New parameter [reason] for the [commands `/lock` and `/unlock`](./features/channel-lock.md). <SuggestionLink id="516" />
- Fixes:
  - Various translation errors.
  - Better handling of the **reason** in the `/timeout` command.
  - Optimizations of the bot startup time and command execution time.
  - Fixes for the interpretation and validation of prefix commands.
  - Fix for issues related to **default avatars**.

## 3.2.0 (10/07/2025) {#3-2-0}

- New feature [DM Lock](./features/dm-lock.mdx).
- Choice of [sanctions](./features/anti-spam.mdx#triggers) applied by anti-spam. <SuggestionLink id="85" />
- New [anti-spam logs](./features/anti-spam.mdx#logs) (more visibility on detections).
- Activation of a [minimum account age](./features/raid-mode.md#minage) without captcha. <SuggestionLink id="314" />
- New [command /bypass minage](./features/raid-mode.md#bypass-minage) to accept a user who doesn't meet the required account age. <SuggestionLink id="447" />
- Complete overhaul of the [command `/userinfo`](./features/utilities.mdx#userinfo).
- New logs for important bot configuration changes.
- Fixes:
  - Anti-spam now works in threads.
  - The [command `/lock`](./features/channel-lock.md) now supports forum and media channels, and blocks threads with the channels.
  - The [captcha](./features/captcha.md) no longer blocks new members when the bot does not have the necessary permissions.
  - Fixed the bug with the [command `/clear`](./features/moderation.mdx#clear) when the bot lacked the necessary permissions in a channel.
- Improved UI/UX:
  - Clarification on the ability to type in the member, role, and channel select menus.
  - Check for the presence of the `COMMUNITY` feature when configuring Auto Raid Mode.
- Performance and stability:
  - Revamped emoji management ([`@fca.gg/glyph` v0.1.0](https://github.com/FCAgreatgoals/glyph)).
  - Reduced startup time and cluster monitoring (`@fca.gg/midway` v1.3.1).
  - Better rate limit handling and reduced latency (`@fca.gg/iris` v1.1.4).
  - Integrated Sentry for error tracking and improved dev support ([`@fca.gg/kino` v1.0.0](https://github.com/FCAgreatgoals/kino)).

## 3.1.1 (21/05/2025) {#3-1-1}

- New feature [Role Tag](./features/tag-role.md). <SuggestionLink id="512" />
- New moderation command [`/timeout`](./features/moderation.mdx#timeout). <SuggestionLink id="52" />
- Automatic tracking of updates in each server's general log channel.
- Performance and stability:
  - Cleanup of persistent antispam states.
  - Fixed memory leaks.
  - Optimized database calls.
  - Improved overall bot speed.

## 3.1.0 (12/03/2025) {#3-1-0}

- Added **Slash Commands**. <SuggestionLink id="463" />
- [Internationalization](./language.md) (added English). <SuggestionLink id="109" />
- New feature [`/report`](./features/reports.md). <SuggestionLink id="164" />
- New configuration commands:
  - [`/settings`](./setup.md#settings) as an interactive panel.
  - [`/setup`](./setup.md#install) as an Onboarding process.
- Advanced settings:
  - Enable/disable each feature individually. <SuggestionLink id="356" />
  - Choose the delay and number of attempts before expulsion by the [captcha](./features/captcha.md#config). <SuggestionLink id="363" />
  - Option to select the verification channel for the [captcha](./features/captcha.md). <SuggestionLink id="385" />
  - Ignore users/roles/categories in the [anti-spam](./features/anti-spam.mdx#ignore). <SuggestionLink id="362" />
  - Choose the [prefix for hybrid commands](./guides/prefix.md). <SuggestionLink id="103" />
  - Option to choose whether the [`/lock` command](./features/channel-lock.md) renames the locked channel with `🔒`.
- Improved UX:
  - Prefix displayed when pinging the bot + mention as a universal prefix. <SuggestionLink id="193" />
  - Disabling the [captcha](./features/captcha.md) no longer deletes the associated role and channel. <SuggestionLink id="43" />
  - Automatic detection of permission issues related to channels and roles. <SuggestionLink id="65" />
  - Automatic visibility check of the verification channel in Discord's onboarding process.
  - Standardized messages.
- Improved bot performance and stability.

## 3.0.0 (14/01/2023) {#3-0-0}

- Complete rewrite aimed at preparing for future updates and stabilizing the bot.
- Fixed all known bugs to date.
- The [`?raidmode` command](./features/raid-mode.md) now uses the "Disable Invites" feature.
- Automatic sending of a private message to the concerned member when a sanction is applied. <SuggestionLink id="426" />

## 2.2.0 (13/04/2020) {#2-2-0}

- Improved bot performance.
- Significant changes to the project's internal architecture.

## 2.1.3 (13/10/2019) {#2-1-3}

- Removed the blacklist and associated commands.
- Ability to ban any user by their ID, even if they are not in the affected server. <SuggestionLink id="113" /> <SuggestionLink id="148" />
- Display of the ban reason in the response of the [`?ban` command](./features/moderation.mdx#ban).
- The [`?raidmode` command](./features/raid-mode.md) now requires the permission to kick members.
- Changed the kick duration if the captcha is not completed (5 min). <SuggestionLink id="129" />
- Various internal improvements.

## 2.1.2 (17/04/2019) {#2-1-2}

- Added the [`?userinfo` command](./features/utilities.mdx#userinfo). <SuggestionLink id="29" />
- ~~Added the `?lockall` and `?unlockall` commands~~ (Feature removed).
- Added the [`?kick`](./features/moderation.mdx#kick) and [`?ban`](./features/moderation.mdx#ban) commands.
- Added [min-age to the captcha](./features/raid-mode.md#minage) (ability to set a minimum account age to access the server).
- Option to configure automatic deletion of command invocation messages. <SuggestionLink id="26" />
- The logs channel is automatically recreated if deleted.
- Overhauled database connection.
- Bug fixes and various improvements.

## 2.1.1 (21/02/2019) {#2-1-1}

- Removed `?settings captcha` (replaced by `?captcha`).
- Added the ability to set a [logs channel](./features/captcha.md#logs) for the captcha.
- Added an [autorole](./features/captcha.md#autorole) compatible with the captcha.
- Simplified the [captcha](./features/captcha.md) (5/6 correct letters required).
- Other minor changes.

## 2.1.0 (16/02/2019) {#2-1-0}

- Added captcha (`?settings captcha`). <SuggestionLink id="11" />
- Added anti-spam security level (`?settings spamlevel`). <SuggestionLink id="25" />
- Added the `?about` and `?invite` commands.
- Added the [`?clear` command](./features/moderation.mdx#clear).
- Various changes and bug fixes.

## 2.0.1 (04/02/2019) {#2-0-1}

- Rewrote the help (`?help`).
- Fixed bugs in [`?lock`](./features/channel-lock.md#lock) and [`?unlock`](./features/channel-lock.md#unlock).

## 2.0.0 (26/01/2019) {#2-0-0}

- Added [anti-spam](./features/anti-spam.mdx).
- Added [automatic raid mode](./features/raid-mode.md#config).
- Added the logs channel.
- Added bot configuration.
- Added [channel locking](./features/channel-lock.md).
- Numerous various changes.
